Added feature columns for major/minor, key, and spectral rolloff

--- a/config/feature_config.json
+++ b/config/feature_config.json
@@ -19,5 +19,9 @@
   "mfcc": {
     "use-mean": true,
     "n": 6
+  },
+  "spectral-rolloff": {
+    "get-stats": true,
+    "rolloff-percent": 0.99
   }
 }
